--- a/course-v2/assets/css/video.scss
+++ b/course-v2/assets/css/video.scss
@@ -118,11 +118,11 @@ a.video-download-button:visited {
   text-decoration: none !important;
 }
 
-#main-content a.download-file.video-download-button:link {
+#course-main-content a.download-file.video-download-button:link {
   color: white;
 }
 
-#main-content a.download-file.video-download-button:visited {
+#course-main-content a.download-file.video-download-button:visited {
   color: white;
 }
 
